k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: volunteer-shifts2
  namespace: colossus-volunteer-shifts2
  labels:
    app: volunteer-shifts2
    managed-by: colossus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: volunteer-shifts2
  template:
    metadata:
      labels:
        app: volunteer-shifts2
    spec:
      hostAliases:
        - ip: "192.168.50.250"
          hostnames:
            - "ubuntu.desmana-truck.ts.net"
      containers:
        - name: app
          image: ubuntu:30500/volunteer-shifts2:latest
          imagePullPolicy: Always
